--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,40 @@
 <resources>
     <string name="app_name">SudokuMaster</string>
+
+    <string name="main_description">You need login or register to explore all features</string>
+    <string name="home_register">Register</string>
+    <string name="home_login">Login</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="error_empty_field">This field can\'t be empty</string>
+    <string name="error_not_equals_field">%1$s must be equals</string>
+    <string name="error_privacy_check">Must accept privacy terms</string>
+    <string name="passwords">Passwords</string>
+    <string name="emails">Emails</string>
+
+    <string name="error_email_exist">This email already exist</string>
+    <string name="error_wrong_password">Invalid user / password</string>
+    <string name="error_username_exist">This username already exist</string>
+    <string name="error_username_not_exist">Invalid user / password</string>
+    <string name="error_unknown">Auth error, please try again later</string>
+
+    <string name="have_account_login">You do not have an account? Sign up</string>
+    <string name="login_login">Email</string>
+    <string name="login_password">Password</string>
+    <string name="login_home">Login</string>
+    <string name="login_button">LOGIN </string>
+    <string name="home_text">You need to login or register to explorer all features</string>
+    <string name="register_home">REGISTER</string>
+    <string name="login_empty"> </string>
+    <string name="login_error">Incorrect email or password</string>
+    <string name="username_hint">Username</string>
+    <string name="already_account_text">Already have an account? Log in</string>
+    <string name="register_button_text">REGISTER</string>
+    <string name="checkbox_text">By registering, I accept the Privacy policy and the Terms of use of the application</string>
+    <string name="repeat_password_hint">Repeat Password</string>
+    <string name="password_hint">Password</string>
+    <string name="repeat_email_hint">Repeat Email</string>
+    <string name="email_hint">Email</string>
+    <string name="name_hint">Name</string>
+    <string name="register_text">Register</string>
 </resources>
