Changes in manifest, data, fragments, strings and navigation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,13 +7,20 @@
     <string name="error_empty_field">Este apartado no puede estar vacío</string>
     <string name="error_privacy_check">Debe aceptar los términos de privacidad</string>
     <string name="passwords">Contraseñas</string>
-    <string name="error_email_exist">El email ya existe</string>
+    <string name="error_email_exist">Este email ya existe</string>
+    <string name="error_username_not_exist">Usuario o contraseña incorrectos</string>
+    <string name="invalid_email_address">Introduzca un email válido</string>
+    <string name="emails_do_not_match">Los emails deben coincidir</string>
+    <string name="error_email_already_exist">El email ya existe</string>
     <string name="error_wrong_password">Usuario o contraseña inválidas</string>
     <string name="error_username_exist">El usuario ya existe</string>
-    <string name="error_username_not_exist">Usuario o contraseña inválidas</string>
+    <string name="error_invalid_email_password">Usuario o contraseña inválidas</string>
     <string name="error_unknown">Error de autenticación, por favor, inténtelo de nuevo</string>
     <string name="have_account_login">¿No tiene cuenta? Regístrese</string>
     <string name="login_password">Contraseña</string>
+    <string name="password_min_length">La contraseña debe tener más de 8 caracteres</string>
+    <string name="passwords_do_not_match">Las contraseñas deben coincidir</string>
+    <string name="required_field">Campo requerido</string>
     <string name="login_home">Inicio sesión</string>
     <string name="login_button">INICIO SESIÓN</string>
     <string name="register_home">REGISTRO</string>
