--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,19 +4,23 @@
     <string name="main_description">You need login or register to explore all features</string>
     <string name="home_register">Register</string>
     <string name="home_login">Login</string>
-
+    <string name="emails_do_not_match">Emails do not match</string>
     <string name="error_empty_field">This field can\'t be empty</string>
     <string name="error_not_equals_field">%1$s must be equals</string>
     <string name="error_privacy_check">Must accept privacy terms</string>
     <string name="passwords">Passwords</string>
+    <string name="password_min_length">Password must be more than 8 characters</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
     <string name="emails">Emails</string>
-
-    <string name="error_email_exist">This email already exist</string>
+    <string name="invalid_email_address">Invalid email address</string>
+    <string name="error_email_already_exist">This email already exist</string>
     <string name="error_wrong_password">Invalid user / password</string>
-    <string name="error_username_exist">This username already exist</string>
+    <string name="error_email_exist">This email already exist</string>
     <string name="error_username_not_exist">Invalid user / password</string>
+    <string name="error_username_exist">This username already exist</string>
+    <string name="error_invalid_email_password">Invalid user / password</string>
     <string name="error_unknown">Auth error, please try again later</string>
-
+    <string name="required_field">Required field</string>
     <string name="have_account_login">You do not have an account? Sign up</string>
     <string name="login_login">Email</string>
     <string name="login_password">Password</string>
